2006-08-21  Mike Kestner  <mkestner@novell.com>

	* bootstrap-2.10 : tag and bump version to 2.10.0. 

2006-08-10  Mikkel Kruse Johnsen <mikkel@linet.dk>

	* sample/GtkDemo/DemoPrinting.cs : new Gtk.Print sample.
	* sample/GtkDemo/Makefile.am : build new source.

2006-08-10  Mike Kestner  <mkestner@novell.com>

	* pango/Pango.metadata : add library attr to pango_cairo methods. 
	* pango/pango-sharp.dll.config.in : add libpangocairo mapping.

2006-08-10  Mike Kestner  <mkestner@novell.com>

	* pango/Pango.metadata : some pango_cairo fixup. 
	* pango/pango-api-2.10.raw : regen with pangocairo.h API.
	* sources/gtk-sharp-2.10-sources.xml : don't exclude pangocairo.h.

2006-08-10  Mike Kestner  <mkestner@novell.com>

	* parser/gapi2xml.pl : class parsing regex needs to handle protected
	comments too.

2006-08-07  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : remainder of new API massaging for existing 
	types.
	* gtk/Printer.custom : new static method.
	* gtk/TextBuffer.custom : serialization API implementations.

2006-08-07  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : mark an out param in Style.LookupColor. 
	Some tweaks to duplicated label api.

2006-08-07  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : markup for new Clipboard Rich text funcs. 
	* gtk/Clipboard.custom : manually implement RequestRichText and
	WaitForRichText methods to deal with array marshaling and delegate
	persistence.

2006-08-04  Mike Kestner  <mkestner@novell.com>

	* gtk/Gtk.metadata : a few tweaks to the 2.10 API found in doc/
	audit pass.

2006-08-04  Mike Kestner  <mkestner@novell.com>

	* gdk/Screen.custom : manually implement FontOptions property so
	we can use reflection to access the internal Mono.Cairo ctor.
	* gdk/Gdk.metadata : list marshaling, method-to-property renames,
	and some hides form manual implementation.  Hide 
	gdk_atom_intern_static_string wrapper since it is pointless outside
	the context of C code.
