@@ -1,3 +1,8 @@
+2006-12-28  Brad Taylor  <brad@getcoded.net>
+
+	* sample/GtkDemo/Makefile.am:
+	* sample/GtkDemo/DemoPrinting.cs: Fix build on Win32.
+
 2006-08-21  Mike Kestner  <mkestner@novell.com>
 
 	* bootstrap-2.10 : tag and bump version to 2.10.0. 
